--- a/main.css
+++ b/main.css
@@ -30,7 +30,9 @@ pre {
     align-items: center;
     scroll-snap-align: start;
     margin-bottom: 0;
-    line-height: 1em;
+    
+    font-size: 1.8vh;
+    line-height: 1.6vh;
 }
 
 code {
