--- a/main.css
+++ b/main.css
@@ -32,7 +32,7 @@ pre {
     margin-bottom: 0;
     
     font-size: 1.8vh;
-    line-height: 1.6vh;
+    line-height: min(1.6vh, 1.1vw);
 }
 
 code {
@@ -40,6 +40,7 @@ code {
     width: 100%;
     text-align: center;
     font-size: 1.5vh;
+    font-size: min(1.5vh, 1vw);
     padding: 0;
     text-overflow: clip;
     text-wrap: nowrap;
