--- a/main.css
+++ b/main.css
@@ -40,7 +40,7 @@ code {
     width: 100%;
     text-align: center;
     font-size: 1.5vh;
-    font-size: min(1.5vh, 1vw);
+    font-size: min(1.5vh, 1.0vw);
     padding: 0;
     text-overflow: clip;
     text-wrap: nowrap;
@@ -50,6 +50,11 @@ code {
 @media all and (orientation:portrait) {
     pre {
     min-width: 100vw;
+    line-height: min(1.6vh, 1.8vw);
+
+    }
+    code {
+        font-size: min(1.5vh, 1.7vw);
     }
 }
 
